--- a/sass/fyt-day.scss
+++ b/sass/fyt-day.scss
@@ -85,4 +85,36 @@
       text-align: center;
     }
   }
+
+  @media only screen and (max-width: 768px) {
+    min-height: 350px;
+    max-height: 450px;
+
+    &-card {
+      width: 90px;
+      height: 100px;
+      padding: 28px 16px;
+      margin-right: 10px;
+      margin-bottom: 10px;
+
+      &-selected {
+        top: -28px;
+        right: -28px;
+        width: 56px;
+        height: 56px;
+        span {
+          padding: 0 0 10px 12px;
+          font-size: 12px;
+        }
+      }
+      &-title {
+        font-size: 24px;
+        padding: 2px;
+      }
+      &-desc {
+        font-size: 12px;
+        margin-top: 4px;
+      }
+    }
+  }
 }
