--- a/sass/fyt-final.scss
+++ b/sass/fyt-final.scss
@@ -108,4 +108,56 @@
       background-color: #3cb5ef;
     }
   }
+
+  @media only screen and (max-width: 768px) {
+    padding: 24px;
+
+    &-label {
+      font-size: 16px;
+      margin-bottom: 8px;
+    }
+
+    &-value {
+      font-size: 18px;
+      margin-bottom: 16px;
+      display: flex;
+      align-items: center;
+      flex-direction: row;
+
+      &-deg {
+        margin: 0 8px;
+        padding: 0 12px;
+      }
+
+      &-season {
+        margin-left: 8px;
+        padding: 6px;
+        font-size: 12px;
+      }
+    }
+
+    &-form {
+      margin-top: 0;
+    }
+
+    &-form-group {
+      margin-top: 10px;
+
+      label {
+        font-size: 16px;
+        margin-bottom: 8px;
+      }
+
+      input {
+        font-size: 18px;
+        padding: 0 2px 4px 2px;
+      }
+    }
+
+    &-btn {
+      font-size: 18px;
+      margin-top: 20px;
+      padding: 6px 15px;
+    }
+  }
 }
