--- a/sass/fyt-tags.scss
+++ b/sass/fyt-tags.scss
@@ -69,4 +69,15 @@
       outline: none;
     }
   }
+
+  @media only screen and (max-width: 768px) {
+    padding: 14px 0;
+    &-item {
+      padding: 6px 8px;
+      & > span:first-child {
+        font-size: 14px;
+        margin-right: 10px;
+      }
+    }
+  }
 }
